--- a/locale/core.yml
+++ b/locale/core.yml
@@ -231,7 +231,7 @@ core:
       rename_button: "=> core.ref.rename"
       reply_button: "=> core.ref.reply"
       restore_button: "=> core.ref.restore"
-      toggle_dropdown_accessible_label: 'Alternar o menu de ações da discussão'
+      toggle_dropdown_accessible_label: 'Abrir o menu de ações da discussão'
     discussion_list:
       empty_text: Parece que não há discussões aqui.
       load_more_button: "=> core.ref.load_more"
@@ -255,7 +255,7 @@ core:
       log_out_button: "=> core.ref.log_out"
       profile_button: Perfil
       search_placeholder: Pesquisar
-      session_dropdown_accessible_label: 'Alternar o menu suspenso de opções da sessão'
+      session_dropdown_accessible_label: 'Abrir o menu de opções das sessões'
       settings_button: "=> core.ref.settings"
       sign_up_link: "=> core.ref.sign_up"
     index:
@@ -266,7 +266,7 @@ core:
       mark_all_as_read_tooltip: "=> core.ref.mark_all_as_read"
       refresh_tooltip: Atualizar
       start_discussion_button: "=> core.ref.start_a_discussion"
-      toggle_sidenav_dropdown_accessible_label: 'Alternar o menu de navegação'
+      toggle_sidenav_dropdown_accessible_label: 'Abrir o menu de navegação'
       meta_title_text: "=> core.ref.all_discussions"
     index_sort:
       latest_button: Mais recentes
@@ -299,7 +299,7 @@ core:
       delete_forever_button: "=> core.ref.delete_forever"
       edit_button: "=> core.ref.edit"
       restore_button: "=> core.ref.restore"
-      toggle_dropdown_accessible_label: 'Alternar o menu do controle de postagens'
+      toggle_dropdown_accessible_label: 'Abrir o menu do controle de postagens'
       delete_confirmation: Tem certeza de que deseja excluir esta postagem para sempre?
         Essa ação não pode ser desfeita.
       hide_confirmation: Tem certeza de que deseja excluir esta postagem?
@@ -307,7 +307,7 @@ core:
       now_link: agora
       original_post_link: Post Original
       unread_text: "{count} não lida"
-      viewing_text: "{index} de {count} postagem |{index} de {count} postagens"
+      viewing_text: '{count, plural, one {{index} de {formattedCount} postagem} other {{index} de {formattedCount} postagens}}'
     post_stream:
       discussion_renamed_old_tooltip: 'O título antigo era: "{old}"'
       discussion_renamed_text: "{username} alterou o título para {new}."
@@ -362,6 +362,7 @@ core:
       delete_error_message: A exclusão do usuário <i>{username} ({email})</i> falhou
       delete_success_message: O usuário <i>{username} ({email})</i> foi excluído
       edit_button: "=> core.ref.edit"
+      toggle_dropdown_accessible_label: 'Abrir o menu de controle dos usuários'
     user_email_confirmation:
       alert_message: "=> core.ref.confirmation_email_sent"
       resend_button: Reenviar e-mail de confirmação
@@ -369,6 +370,20 @@ core:
   lib:
     badge:
       hidden_tooltip: Escondido
+    dropdown:
+      toggle_dropdown_accessible_label: 'Abrir o menu'
+    edit_user:
+      activate_button: 'Ativar o usuário'
+      email_heading: '=> core.ref.email'
+      email_label: '=> core.ref.email'
+      groups_heading: Grupos
+      password_heading: '=> core.ref.password'
+      password_label: '=> core.ref.password'
+      set_password_label: 'Definir uma nova senha'
+      submit_button: '=> core.ref.save_changes'
+      title: '=> core.ref.edit_user'
+      username_heading: '=> core.ref.username'
+      username_label: '=> core.ref.username'
     error:
       generic_message: Opa! Algo deu errado. Por favor, recarregue a página e tente
         novamente.
@@ -380,6 +395,8 @@ core:
         as seguintes extensões dependentes sejam desativadas: {extensions}'
       missing_dependencies_message: 'Não é possível ativar {extension} até que as
         seguintes dependências sejam ativadas: {extensions}'
+    loading_indicator:
+      accessible_label: '=> core.ref.loading'
     number_suffix:
       kilo_text: K
       mega_text: M
@@ -477,11 +494,13 @@ core:
     delete_forever: Deletar permanentemente
     discussions: Discussões
     edit: Editar
+    edit_user: 'Editar usuário'
     email: E-mail
     icon: Ícone
     icon_text: Digite o nome de qualquer classe de ícone <a>FontAwesome</a> , <em>incluindo</em>
       o prefixo <code>fas fa-</code> .
     load_more: Carregue mais
+    loading: Carregando...
     log_in: Entrar
     log_out: Sair
     mark_all_as_read: Marcar tudo como lido
@@ -499,7 +518,7 @@ core:
     save_changes: Salvar Alterações
     settings: Configurações
     sign_up: Inscrever-se
-    some_others: "{count} outro |{count} outros"
+    some_others: '{count, plural, one {# outro} other {# outros}}'
     start_a_discussion: Iniciar Discussão
     username: Nome de usuário
     users: Usuários
